INSTALL( PROGRAMS comma-application-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-log-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-name-value-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-progress-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-resources-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-sync-util DESTINATION ${comma_INSTALL_BIN_DIR} )
INSTALL( PROGRAMS comma-units-util DESTINATION ${comma_INSTALL_BIN_DIR} )

if( comma_BUILD_APPLICATIONS )
    add_subdirectory( applications )
endif( comma_BUILD_APPLICATIONS )
ADD_SUBDIRECTORY( process )
ADD_SUBDIRECTORY( misc )
