install( PROGRAMS comma-application-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-log-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-name-value-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-progress-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-resources-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-sync-util DESTINATION ${comma_INSTALL_BIN_DIR} )
install( PROGRAMS comma-units-util DESTINATION ${comma_INSTALL_BIN_DIR} )

if( comma_BUILD_APPLICATIONS )
    add_subdirectory( applications )
endif( comma_BUILD_APPLICATIONS )
add_subdirectory( process )
add_subdirectory( misc )
